Add third column

--- a/individual_site/index.html
+++ b/individual_site/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="cards.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -53,8 +54,8 @@
     </div>
     <div class="bg-dark text-center text-light fw-bold fs-1 py-5">Достопримечательности Венеции</div>
     <div class="cards container-fluid bg-dark ">
-        <div class="row bg-dark same-el">
-            <div class="col-lg-6 col-sm-12">
+        <div class="row">
+            <div class="col-lg-4 col-sm-12 col-md-6">
                 <div class="info-card bg-light">
                     <div class="info-thumb">
                         <a href="#"><img src="img/Grand-Canal.jpg" alt="" class="rounded-circle"></a>
@@ -62,7 +63,7 @@
                     <div class="info-details">
                         <div class="info-main-details"></div>
                         <h4><a href="#">Гранд-канал</a></h4>
-                        <p class="fst-italic">Самый большой и красивый канал в городе. Можно сказать, его центральный проспект, длина которого 4 км. При обзоре с прогулочного катера открываются поистине открыточные виды – колоритные особняки, торжественные палаццо, красивые соборы. Да и виды на канал, который проходит через весь город, тоже весьма живописны.</p>
+                        <p class="fst-italic">Самый большой и красивый ка нал в городе. Можно сказать, его центральный проспект, длина которого 4 км. При обзоре с прогулочного катера открываются поистине открыточные виды – колоритные особняки, торжественные палаццо, красивые соборы. Да и виды на канал, который проходит через весь город, тоже весьма живописны.</p>
                         <div class="info-bottom-details d-flex justify-content-between">
                             <div class="date">
                                 Дата основания:
@@ -76,7 +77,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-sm-12">
+            <div class="col-lg-4 col-sm-12 col-md-6">
                 <div class="info-card bg-light">
                     <div class="info-thumb">
                         <a href="#"><img src="img/St-Mark.jpg" alt="" class="rounded-circle"></a>
@@ -97,7 +98,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-sm-12">
+            <div class="col-lg-4 col-sm-12 col-md-6">
                 <div class="info-card bg-light">
                     <div class="info-thumb">
                         <a href="#"><img src="img/7-Santa_Maria_Gloriosa_dei_Frari-e1527216127496.jpg" alt="" class="rounded-circle"></a>
@@ -118,7 +119,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-sm-12">
+            <div class="col-lg-4 col-sm-12 col-md-6">
                 <div class="info-card bg-light">
                     <div class="info-thumb">
                         <a href="#"><img src="img/8-San_Giorgio_Maggiore_Island-e1529737857995.jpg" alt="" class="rounded-circle"></a>
@@ -130,6 +131,49 @@
                             <div class="date">
                                 Дата основания:
                                 <span class="fw-bold">01.01.1970</span>
+                            </div>
+                            <div class="info-links">
+                                <a href="#"><i class="fa-solid fa-share"></i></a>
+                                <a href="#"><i class="far fa-heart"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12 col-md-6">
+                <div class="info-card bg-light">
+                    <div class="info-thumb">
+                        <a href="#"><img src="img/16-The_Bridge_of_Sighs-e1527223310622.jpg" alt="" class="rounded-circle"></a>
+                    </div>
+                    <div class="info-details">
+                        <div class="info-main-details"></div>
+                        <h4><a href="#">Мост Вздохов</a></h4>
+                        <p class="fst-italic">Изящный мост соединяет королевский палаццо с тюрьмой и выполнен в виде арки. Это одно из самых романтичных мест в Венеции. Согласно примете, если влюбленные поцелуются, стоя на этом мосту, их любовь будет вечной.</p>
+                        <div class="info-bottom-details d-flex justify-content-between">
+                            <div class="date">
+                                Дата основания:
+                                <span>01.01.1970</span>
+                            </div>
+                            <div class="info-links">
+                                <a href="#"><i class="fa-solid fa-share"></i></a>
+                                <a href="#"><i class="far fa-heart"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12 col-md-6">
+                <div class="info-card bg-light">
+                    <div class="info-thumb">
+                        <a href="#"><img src="img/20-the_Murano_Isle-e1527223674355.jpg" alt="" class="rounded-circle"></a>
+                    </div>
+                    <div class="info-details">
+                        <h4><a href="#">Остров Мурано</a></h4>
+                        <p class="fst-italic">Наверняка многие видели прекрасные украшения из венецианского стекла и слышали о них восторженные отзывы. Истоки этого ремесла идут как раз с острова Мурано, поэтому часто стекло называется муранским. Великолепные колье, браслеты, перстни и сережки – здесь можно приобрести украшения в разном стиле и цвете. Лучше делать это в специализированных магазинчиках, т.к. с рук велика вероятность купить подделку. На острове очень много таких магазинов, предлагающих работы местных стеклодувов. Также здесь можно посмотреть за процессом создания шедевров.</p>
+                        <div class="info-bottom-details d-flex justify-content-between">
+                            <div class="date">
+                                Дата основания:
+                                <span>01.01.1970</span>
                             </div>
                             <div class="info-links">
                                 <a href="#"><i class="fa-solid fa-share"></i></a>
