--- a/individual_site/share.html
+++ b/individual_site/share.html
@@ -55,11 +55,27 @@
                 <br>
                 <input type="file" class="form-control-file" id="exampleFormControlFile1">
             </div>
-            <button type="submit" class="btn btn-primary mt-3 bg-dark border-dark">Отправить в редакцию</button>
+            <button type="reset" class="btn btn-primary mt-3 bg-dark border-dark" data-bs-toggle="modal" data-bs-target="#successModal">Отправить в редакцию</button>
         </form>
     </div>
 </section>
-
+<div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="successModalLabel">Спасибо за обратную связь</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Отправляем историю?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Подтвердить</button>
+            </div>
+        </div>
+    </div>
+</div>
 <footer>
     <section class="footer bg-dark">
         <div class="container-fluid">
